# TOPP

./: .gitignore
example/: CMakeLists.txt  TOPPInstance.cpp  TOPPInstance.hpp  data_plot.py  learn.py  quick_example1.cpp  quick_example1.py  quick_example2.py  quick_example3.py
src/: KinematicLimits.h  TOPP.cpp  TOPP.h  Trajectory.cpp
src/python/: QuadraticConstraints.py  TOPPpy.py  Trajectory.py  Utilities.py
